# kv-service

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: kv-service-backend-ci.yml  kv-service-frontend-ci.yml  kv-service-integration-tests-ci.yml
kv-service-backend/: Cargo.toml  build.rs
kv-service-backend/src/: lib.rs  main.rs  utils.rs
kv-service-backend/src/services/: key_value_service.rs
kv-service-frontend/: Cargo.toml  build.rs
kv-service-frontend/src/: controllers.rs  error.rs  lib.rs  main.rs  services.rs
kv-service-frontend/src/controllers/: key_value_controller.rs
kv-service-frontend/src/services/: key_value_service.rs
kv-service-tests/: Cargo.toml
kv-service-tests/tests/: integration_tests.rs
proto/: key_value_service.proto
