[package]
name = "kv-service-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

[dev-dependencies]
mockall = "0.12.1"

[build-dependencies]
tonic-build = "0.11"