[package]
name = "kv-service-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
kv-service-frontend = { path = "../kv-service-frontend" }
kv-service-backend = { path = "../kv-service-backend" }
either = "1.10.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"